feat: adicionado a opção de cadastro de treino e listagem

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.treinos.TreinosActivity" />
+        <activity android:name=".ui.treinos.TreinoFormActivity" />
+        <activity android:name=".ui.exercicios.ExercicioFormActivity" />
     </application>
 
 </manifest>
