--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.GymPlanner"
         tools:targetApi="31">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".ui.treinos.TreinosActivity" />
         <activity android:name=".ui.treinos.TreinoFormActivity" />
         <activity android:name=".ui.exercicios.ExercicioFormActivity" />
         <activity android:name=".ui.exercicios.ExerciciosActivity" />
+        <activity android:name=".ui.registro.RegistroActivity" />
     </application>
 
 </manifest>
