--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/ic_fitness"
+        android:icon="@mipmap/logo_oficial"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_fitness"
+        android:roundIcon="@mipmap/logo_oficial"
         android:supportsRtl="true"
         android:theme="@style/Theme.GymPlanner"
         tools:targetApi="31">
